plugins {
    id 'java'
}

repositories {
    mavenLocal()
    maven {
        url = 'https://repo.maven.apache.org/maven2'
    }
}

dependencies {
    testImplementation('org.junit.jupiter:junit-jupiter-api:5.5.0')
    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.5.0')
}

test {
    useJUnitPlatform{
        includeEngines 'junit-jupiter'

    }
    testLogging {
        events "passed", "skipped", "failed", "standardOut", "standardError"
    }
}

group = 'algorithm'
version = '1.0-SNAPSHOT'
description = 'java-algorithm'
sourceCompatibility = '1.8'
